--- a/scripts/show_model.ipynb
+++ b/scripts/show_model.ipynb
@@ -79,12 +79,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8 (main, Nov 24 2022, 14:13:03) [GCC 11.2.0]"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "448ce337e3faefbdb291b530989dd3047dc2ae33557841f3a83b4bec8179d759"
+    "hash": "9c5914568ca2a25b222ec99828241d3f35ec8b0751fb6ae26120bc5953130ae6"
    }
   }
  },
