remove created nans after time series filtering

--- a/scripts/show_model.ipynb
+++ b/scripts/show_model.ipynb
@@ -30,7 +30,7 @@
     "# load dataframe from disk that contains all features and samples\n",
     "file_parquet = input(\"Enter file name of pandas dataframe (*.parquet): \")\n",
     "\n",
-    "nmax = 200  # number of features\n",
+    "nmax = 20  # number of features\n",
     "mvpa = MVPA.from_file(file_parquet, nmax=nmax)\n",
     "mvpa.scale_features(\"standard\")  # standard scaling within folds"
    ]
@@ -41,7 +41,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train = mvpa.dtf.iloc[:, 2:].to_numpy()\n",
+    "X_train = mvpa.dtf.iloc[:, 2:nmax+2].to_numpy()\n",
     "y_train = mvpa.dtf[\"label\"].to_numpy()\n",
     "\n",
     "v1 = np.c_[X_train, y_train]\n",
@@ -79,7 +79,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.8 (main, Nov 24 2022, 14:13:03) [GCC 11.2.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
